// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step2 should render normally 1`] = `
<EuiForm
  isInvalid={false}
>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label="Email address"
    labelType="label"
  >
    <EuiFieldText
      disabled={false}
      onChange={[Function]}
      value="test@test.com"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`Step2 should show form errors 1`] = `
<EuiForm
  isInvalid={true}
>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error="This is required"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    label="Email address"
    labelType="label"
  >
    <EuiFieldText
      disabled={false}
      onChange={[Function]}
      value="test@test.com"
    />
  </EuiFormRow>
</EuiForm>
`;
